--- a/popup.css
+++ b/popup.css
@@ -17,8 +17,12 @@ body {
 
 .cant-container,
 header {
-  margin-left: 1rem !important;
-  margin-right: 1rem !important;
+  margin-left: 5px !important;
+  margin-right: 5px !important;
+}
+
+hr{
+  opacity:.5;
 }
 
 img {
@@ -65,6 +69,7 @@ header h4 {
   margin: 0;
   text-align: center;
   font-size: 20px;
+  font-weight: unset;
 }
 
 #picker_btn {
@@ -81,7 +86,7 @@ header h4 {
 }
 
 #picker_btn:hover {
-  background-color: #0a7195;
+  background-color: #025479;
   color: var(--text-color);
 }
 
@@ -91,7 +96,7 @@ header h4 {
   padding: 0;
   display: none;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  margin: 10px 3px;
+  margin: 5px 5px;
 }
 
 #result > li {
@@ -101,7 +106,7 @@ header h4 {
     border-radius: 3px;
     color: var(--text-color);
     text-align: center;
-    height: 50px;
+    height: 30px;
     display: flex;
     justify-content: end;
     align-items: end;
