--- a/popup.css
+++ b/popup.css
@@ -15,8 +15,7 @@ body {
   margin: 0px !important;
 }
 
-.cant-container,
-header {
+.cant-container{
   margin-left: 5px !important;
   margin-right: 5px !important;
 }
@@ -52,8 +51,13 @@ img {
 header {
   display: flex;
   justify-content: space-between;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  background-color:#0d1117;
+  /*margin-top: 0.5rem;*/
+  /*margin-bottom: 0.5rem;*/
+}
+
+hr{
+  margin:0 !important;
 }
 
 header div {
@@ -138,6 +142,12 @@ header h4 {
   display:flex;
   justify-content: center;
   align-items: center;
+  width:35px;
+  height:35px;
+}
+
+#ClearButton:hover{
+  background-color:#ba1423;
 }
 
 #ClearButton img{
